Restore Feast Java SDK and Ingestion compatibility with Java 8 runtimes
Backports #722 to v0.5.